# diglim-ebpf

./: .gitignore  AUTHORS  CHANGES  Makefile.am  README.md  configure.ac
common/: Makefile.am  clientserver.c  compact.c  hash_info.c  hexdump.c  lib.c  libbpf.c  log.c  parsers.c  rpm.c
docs/: Makefile.am  compact_gen.1  compact_gen.txt  diglim_log.1  diglim_log.txt  diglim_setup.sh.1  diglim_setup.sh.txt  diglim_user.1  diglim_user.txt  diglim_user_loader.1  diglim_user_loader.txt  map_gen.1  map_gen.txt  rpm_gen.1  rpm_gen.txt
ebpf/: Makefile.am  diglim_kern.c  diglim_user.c  diglim_user_client.c  ima-policy
ebpf/kernel/: Makefile.am  diglim_compact_parser.c  diglim_map_parser.c  diglim_rpm_parser.c  diglim_sec.c
ebpf/user/: Makefile.am  diglim_log.c  diglim_user.c  diglim_user_loader.c
generators/: Makefile.am  compact_gen.c  map_gen.c  rpm_gen.c
include/: Makefile.am  common.h  common_kern.h  common_user.h  libbpf.h  log.h  rpm-common.h
initrd/: Makefile.am
initrd/dracut/: Makefile.am  diglim.conf  load_digest_lists.sh  module-setup.sh
kernel-mod/: Makefile.am
kernel-mod/mod/: Makefile  diglim_kern_preload.c
parsers/: Makefile.am  compact.c  rpm.c
rpm-plugin/: Makefile.am  diglim.c
scripts/: Makefile.am  diglim_setup.sh
systemd/: Makefile.am  diglim_log.service  diglim_user.service
