dist_pkgdata_DATA = compact_gen.txt \
		    rpm_gen.txt \
		    map_gen.txt \
		    diglim_setup.sh.txt \
		    diglim_log.txt \
		    diglim_user_loader.txt \
		    diglim_user.txt

man1_MANS = compact_gen.1 \
	    rpm_gen.1 \
	    map_gen.1 \
	    diglim_setup.sh.1 \
	    diglim_log.1 \
	    diglim_user_loader.1 \
	    diglim_user.1
